# varclock

./: .gitignore  Cargo.toml  README.md  TIMESTAMP_EXTRACTION.md  test.out  test_gz.rs  test_regions.bed  test_your_format.bed
scripts/: enhanced_plot.R  simple_robust_plot.R  simpleplot.R  tag_reads.sh
src/: bam.rs  bed.rs  lib.rs  main.rs  main_new.rs  output.rs  types.rs  variant.rs  variant_new.rs  variant_old.rs  vcf.rs
test_data/: .gitignore  simpletest.txt  test.out
