[package]
name = "varclock"
version = "1.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
noodles = { version = "0.99.0", features = ["bam", "bed", "vcf", "bgzf"] }
noodles-bam = "0.81.0"
noodles-bed = "0.26.0"
noodles-core = "0.17.0"
noodles-vcf = "0.79.0"
noodles-sam = "0.77.0"
noodles-bgzf = "0.41.0"
noodles-tabix = "0.36.0"
noodles-csi = "0.25.0"
flate2 = "1.0"
rayon = "1.8"
num_cpus = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
arc-swap = "1.6"
